--- a/index.html
+++ b/index.html
@@ -1,12 +1,97 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title></title>
+	<style type="text/css">
+		body{
+			padding:0px;
+			margin: 0px;
+			text-align: center;
+		}
+		@font-face{
+			font-family: texto;
+			src:url(fonts/The_Emperors_font.woff);
+		}
+		img{
+			height:300px;
+		}
+		div.sec1{
+			background-color:#FF1493;
+			padding-top: 25px;
+			padding-bottom: 25px;
+		}
+		div.sec1 h1, 
+		div.sec1 h2 {
+			text-align: center;
+			margin: 0;
+		}
+		div.sec1 h1{
+			color: yellow;
+	
+		}
+		div.sec1 h2 {
+			color:white;
+
+		}
+		div.sec2 {
+			background-color:blue;
+			text-align: center;
+		}
+		.sec3{
+			background-color: black;
+			background-image:url("cuzco2.jpg");
+			background-size:cover ;
+			background-position: center 1px;
+			padding-top: 0px;
+			padding-bottom: 0px;
+			height: 800px;
+		}
+		.sec3 p,h1{
+			text-align:right;
+			color:white;
+			padding:0;
+			margin: 0;
+		}
+		div.sec4{
+			background-color: white;
+			text-align: center;
+		}
+		div.sec4 p {
+			font-family: texto;
+			text-align: center;
+			font-size: 4em;
+		}
+		div.sec4 span{
+			margin-left: 100px;
+			margin-right: 100px; 
+
+		}
+
+
+	</style>
 </head>
 <body>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
+   <div class="sec1">
+    	<h1>Las Locuras del Emperador</h1>
+  		<h2>Nuestra primera página web</h2>
+   </div>
+  <div class="sec2">
+  	<img src="cuzco.jpg">
+  </div>
+  <div class="sec3">
+  	  <h1 style="color:yellow;padding-top:30px">Cuzco !!</h1>
+  	  <p>Ooh, sí... el veneno...</p>
+  	  <p>El veneno para Cuzco...</p>
+  	  <p>El veneno que usaremos para matar a Cuzco</p>
+  	  <p>El veneno de Cuzco</p>
+  	  <p>Ese veneno</p>
+  	  <p>claro..</p>
+  </div>
+  <div class="sec4">
+    <p>Precios</p>
+    <p><span>µ</span><span>$10</span></p>
+    <p><span>©</span><span>$20</span></p>
+  </div>
 </body>
 </html>
