--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
 		body{
 			padding:0px;
 			margin: 0px;
-			text-align: center;
 		}
 		@font-face{
-			font-family: texto;
-			src:url(fonts/The_Emperors_font.woff);
+			font-family: 'The_Emperors';
+            src: url('fonts/The_Emperors_font.eot');
+            src: url('fonts/The_Emperors_font.eot?#iefix') format('embedded-opentype'),
+            url('fonts/The_Emperors_font.woff') format('woff'),
+            url('fonts/The_Emperors_font.ttf') format('truetype'),
+            url('fonts/The_Emperors_font.svg') format('svg');
 		}
 		img{
 			height:300px;
 		}
 		div.sec1{
 			background-color:#FF1493;
+			height: 200px;
 			padding-top: 25px;
 			padding-bottom: 25px;
 		}
@@ -26,17 +30,28 @@
 			text-align: center;
 			margin: 0;
 		}
-		div.sec1 h1{
+		div.sec1 p{
+			font-family: "The_Emperors";
+			font-weight: bolder;
 			color: yellow;
+			text-align: center;
+			font-size:4em;
+			margin-bottom: 0;
 	
 		}
-		div.sec1 h2 {
+		div.sec1 h1 {
 			color:white;
+			padding: 0px;
 
 		}
 		div.sec2 {
 			background-color:blue;
+			height: 500px;
 			text-align: center;
+		}
+		div.sec2 img{
+			height: 400px;
+			margin-top: 50px;
 		}
 		.sec3{
 			background-color: black;
@@ -47,18 +62,26 @@
 			padding-bottom: 0px;
 			height: 800px;
 		}
-		.sec3 p,h1{
+		.sec3 p{
+			font-size: 2em;
 			text-align:right;
 			color:white;
 			padding:0;
 			margin: 0;
+		}
+		#texto{
+			color:yellow;
+			padding-top: 30px;
+			font-family: "The_Emperors";
+			font-weight: bolder;
+			font-size: 3em;
 		}
 		div.sec4{
 			background-color: white;
 			text-align: center;
 		}
 		div.sec4 p {
-			font-family: texto;
+			font-family: "The_Emperors";
 			text-align: center;
 			font-size: 4em;
 		}
@@ -73,25 +96,25 @@
 </head>
 <body>
    <div class="sec1">
-    	<h1>Las Locuras del Emperador</h1>
-  		<h2>Nuestra primera página web</h2>
+    	<p>Las Locuras del Emperador!</p>
+  		<h1>Nuestra primera página web</h1>
    </div>
   <div class="sec2">
   	<img src="cuzco.jpg">
   </div>
   <div class="sec3">
-  	  <h1 style="color:yellow;padding-top:30px">Cuzco !!</h1>
+  	  <p id="texto">Cuzco !!</h1>
   	  <p>Ooh, sí... el veneno...</p>
   	  <p>El veneno para Cuzco...</p>
   	  <p>El veneno que usaremos para matar a Cuzco</p>
   	  <p>El veneno de Cuzco</p>
-  	  <p>Ese veneno</p>
   	  <p>claro..</p>
+  	  <p>Ese veneno</p>
   </div>
   <div class="sec4">
     <p>Precios</p>
-    <p><span>µ</span><span>$10</span></p>
-    <p><span>©</span><span>$20</span></p>
+    <p><span>-</span><span>$10.00</span></p>
+    <p><span>µ</span><span>$20.00</span></p>
   </div>
 </body>
 </html>
