--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
             url('fonts/The_Emperors_font.ttf') format('truetype'),
             url('fonts/The_Emperors_font.svg') format('svg');
 		}
-		img{
-			height:300px;
-		}
-		div.sec1{
+		
+		.sec1{
 			background-color:#FF1493;
 			height: 200px;
 			padding-top: 25px;
@@ -44,7 +42,7 @@
 			padding: 0px;
 
 		}
-		div.sec2 {
+		.sec2 {
 			background-color:blue;
 			height: 500px;
 			text-align: center;
@@ -76,7 +74,7 @@
 			font-weight: bolder;
 			font-size: 3em;
 		}
-		div.sec4{
+		.sec4{
 			background-color: white;
 			text-align: center;
 		}
