--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<title>Las locuras del emperador</title>
 	<style type="text/css">
 		body{
 			padding:0px;
