--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
 			padding-top: 25px;
 			padding-bottom: 25px;
 		}
-		div.sec1 h1, 
-		div.sec1 h2 {
+		.sec1 h1, h2 {
 			text-align: center;
 			margin: 0;
 		}
-		div.sec1 p{
+		.sec1 p{
 			font-family: "The_Emperors";
 			font-weight: bolder;
 			color: yellow;
@@ -37,7 +36,7 @@
 			margin-bottom: 0;
 	
 		}
-		div.sec1 h1 {
+		.sec1 h1 {
 			color:white;
 			padding: 0px;
 
@@ -47,7 +46,7 @@
 			height: 500px;
 			text-align: center;
 		}
-		div.sec2 img{
+		.sec2 img{
 			height: 400px;
 			margin-top: 50px;
 		}
@@ -78,12 +77,12 @@
 			background-color: white;
 			text-align: center;
 		}
-		div.sec4 p {
+		.sec4 p {
 			font-family: "The_Emperors";
 			text-align: center;
 			font-size: 4em;
 		}
-		div.sec4 span{
+		.sec4 span{
 			margin-left: 100px;
 			margin-right: 100px; 
 
