--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   	<img src="cuzco.jpg">
   </div>
   <div class="sec3">
-  	  <p id="texto">Cuzco !!</h1>
+  	  <p id="texto">Cuzco !!</p>
   	  <p>Ooh, sí... el veneno...</p>
   	  <p>El veneno para Cuzco...</p>
   	  <p>El veneno que usaremos para matar a Cuzco</p>
